samples/_failures_safe/1761718601_6137cc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_515bc9ed.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_515bc9ed.c:175:5: error: expected declaration or statement at end of input
  175 |     switch (type) {
      |     ^~~~~~
./samples/SAFE/__tmp_515bc9ed.c:175:5: error: expected declaration or statement at end of input
